--- a/home.html
+++ b/home.html
@@ -25,14 +25,20 @@
    height:350px;
   }
   
+  .fixed
+  {
+   
+   background-color: black;
+   position:fixed;
+  }
   </style>
   <script>
 
 </script>
 </head>
 <body>
-
-	
+		
+		
 		
 		<div class="container well">
 	
@@ -44,6 +50,12 @@
 			<div class="col-sm-5 text-center vertical-center">
 				<font color="orange" size="4px"><b>JNTUH College of Engineering Hyderabad</b> </font>(Autonomous)<br>
 					Kukatpally, Hyderabad - 500 085, Telangana, India
+			</div>
+			<div class="col-sm-3 vertical-center">
+						<div class = "btn-group" data-toggle = "buttons">
+   							<button class = "btn btn-primary" onclick="window.open('home.html','_self')">Home</button>
+      						<button class="btn btn-primary" onclick="window.open('aboutus.html','_self')">About Us</button>	
+						</div>
 			
 			</div>
 		</div>
@@ -201,7 +213,7 @@
     
   				<div class="form-group"> 
     				<div class="control-label col-sm-offset-2	 col-sm-6">
-      					<button type="submit" class="btn btn-primary">Register</button>
+      					<button type="submit" class="btn btn-success">Register</button>
     				</div>
   				</div>
 
