--- a/home.html
+++ b/home.html
@@ -53,8 +53,8 @@
 			</div>
 			<div class="col-sm-3 vertical-center">
 						<div class = "btn-group" data-toggle = "buttons">
-   							<button class = "btn btn-primary" onclick="window.open('home.html','_self')">Home</button>
-      						<button class="btn btn-primary" onclick="window.open('aboutus.html','_self')">About Us</button>	
+   							<button class = "btn btn-primary" onclick="window.open('home.html','_self')"><span class="glyphicon glyphicon-home"> Home</span></button>
+      						<button class="btn btn-primary" onclick="window.open('aboutus.html','_self')"><span class="glyphicon glyphicon-list-alt"> About Us</span></button>	
 						</div>
 			
 			</div>
