--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   
   <style>
  
-  .vertical-center
+  .margin-all
   {
    
     margin-top:1%;
@@ -40,21 +40,21 @@
 		
 		
 		
-		<div class="container well">
+		<div class="container well margin-all">
 	
 	
 		<div class="row ">
 			<div class="col-sm-offset-3 col-sm-1">
 				<img src="images/logo.jpg" class='img-rounded'>
 			</div>
-			<div class="col-sm-5 text-center vertical-center">
+			<div class="col-sm-5 text-center margin-all">
 				<font color="orange" size="4px"><b>JNTUH College of Engineering Hyderabad</b> </font>(Autonomous)<br>
 					Kukatpally, Hyderabad - 500 085, Telangana, India
 			</div>
-			<div class="col-sm-3 vertical-center">
+			<div class="col-sm-3 margin-all">
 						<div class = "btn-group" data-toggle = "buttons">
    							<button class = "btn btn-primary" onclick="window.open('home.html','_self')"><span class="glyphicon glyphicon-home"> Home</span></button>
-      						<button class="btn btn-primary" onclick="window.open('aboutus.html','_self')"><span class="glyphicon glyphicon-list-alt"> About Us</span></button>	
+      						<button class="btn btn-primary" onclick="window.open('aboutus.html','_self')"><span class="glyphicon glyphicon-list-alt"> AboutUs</span></button>	
 						</div>
 			
 			</div>
